# magpie-framework

./: .gitignore  Cargo.toml  build.zig  build.zig.zon  cbindgen.toml
.zig-cache/o/227ea1119935d89e7a6949151aa25988/: magpie_framework.lib
.zig-cache/o/3162110d6861b2a13a670a03a4612464/: magpie_framework.lib
MagpieFramework/: MagpieFramework.sln  Program.cs
dotnet/: MagpieFramework.sln
dotnet/src/MagpieFramework/: .editorconfig  MAGPIE_NATIVE.cs  MagpieFramework.csproj  Program.cs
dotnet/src/MagpieFramework/Native/: MAGPIE_NATIVE.cs
dotnet/src/MagpieFramework/Native/_Structs/: Window.cs
native/: Cargo.toml
native/bindings/: magpie.h
native/src/: lib.rs
src/: main.zig  root.zig
src/windowing/: window.zig
